--- a/rai_build.yml
+++ b/rai_build.yml
@@ -19,9 +19,10 @@ commands:
       #  - /usr/bin/time python m1.2.py # execute code
       #  - nvprof python m1.2.py
       #  - /usr/bin/time python m2.1.py # execute code
-    - /usr/bin/time python m3.1.py 10000
-    - /usr/bin/time python m3.1.py 1000
+    # - /usr/bin/time python m3.1.py 10000
+    # - /usr/bin/time python m3.1.py 1000
     - /usr/bin/time python m3.1.py 100
+    # - /usr/local/cuda/bin/cuda-memcheck  python m3.1.py
       #- nvprof -o timeline.nvprof python m3.1.py
       #    - /usr/bin/time python m4.1.py # execute code
       #    - /usr/bin/time python final.py # execute code
